--- a/ilab/src/main/webapp/resources/forge-style.css
+++ b/ilab/src/main/webapp/resources/forge-style.css
@@ -26,7 +26,7 @@ body {
    	margin: 0;
    	padding: 0;
    	font-size: 0.9em;
-	background-color: #5F5F5F;
+	background-color: rgb(0,95,141);
 	color: #5b5b5b;
 	font-size:13px;
     text-shadow: 0 1px 0 #efefef;
@@ -232,7 +232,7 @@ footer p {
  */
  
 #content {
-	margin-left: 230px;
+	margin-left: 350px;
 	padding-left:10px;
 }
 
@@ -421,13 +421,13 @@ footer p {
     padding-bottom: 10px;
 	}
 #content h2 {
-	color:#867f10;
+	color:rgb(0,161,203,0.85);
 	line-height:46px;
 	padding-top:5px;
 	border-top:1px solid #ccc;	
 }
 #content h2.success {
-	color:#5d8a10;
+	color:#1c65ac;
 	line-height:46px;
 	padding: 5px 0 20px 35px;
 	border-top:1px solid #ccc;
